--- a/estate_nursery/views/session_workflow.xml
+++ b/estate_nursery/views/session_workflow.xml
@@ -41,6 +41,12 @@
             <field name="signal">draft</field>
         </record>
 
+        <record model="workflow.transition" id="batch_confirmed_to_draft">
+            <field name="act_from" ref="confirmed"/>
+            <field name="act_to" ref="draft"/>
+            <field name="signal">draft</field>
+        </record>
+
         <record model="workflow.transition" id="batch_confirmed_to_done">
             <field name="act_from" ref="confirmed"/>
             <field name="act_to" ref="approved"/>
