[FIX] estate_nursery: add lot_id field (required field).

--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -148,6 +148,7 @@
                         </group>
                         <group name="top_right">
                             <field name="picking_id"/>
+                            <field name="lot_id"/>
                             <field name="culling_location_id" attrs="{'required': [('state','=','draft')], 'readonly': [('state','!=','draft')]}"/>
                         </group>
                     </group>
